force-app/main/default/objects/CandidateProfile__c/CandidateProfile__c.object-meta.xml
<CustomObject>
    <label>CandidateProfile</label>
    <nameField>
        <label>Candidate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CandidateProfiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>