force-app/main/default/objects/CandidateProfile__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <description>Field to store candidate&apos;s education.</description>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>B.Tech</fullName>
            </value>
            <value>
                <fullName>M.Tech</fullName>
            </value>
            <value>
                <fullName>B.Com</fullName>
            </value>
            <value>
                <fullName>B.Sc</fullName>
            </value>
            <value>
                <fullName>BCA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>