force-app/main/default/objects/CandidateProfile__c/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <description>Field to add User&apos;s Skills</description>
    <label>Skills</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>