force-app/main/default/objects/CandidateProfile__c/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <description>Field to store No.of years of Work Experience</description>
    <label>Work Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>