force-app/main/default/objects/CandidateProfile__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Work_Experience__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>